Cleaned up code folder stucture. I think I got all the paths right..

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
 	  "skipLibCheck": true, 
 	  "forceConsistentCasingInFileNames": true 
 	},
-	"include": ["res/**/*.ts"]
+	"include": ["res/ts/**/*.ts"]
   }
